--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
-    "format": "npx prettier --write ."
+    "format": "npx prettier --write .",
+    "test": "vitest run"
   },
   "devDependencies": {
     "@smui/button": "^7.0.0-beta.14",
@@ -17,12 +18,15 @@
     "@smui/textfield": "^7.0.0-beta.14",
     "@sveltejs/vite-plugin-svelte": "^2.4.2",
     "@tsconfig/svelte": "^5.0.0",
+    "@vitest/browser": "^0.33.0",
     "prettier": "^3.0.0",
     "svelte": "^4.0.3",
     "svelte-check": "^3.4.4",
     "tslib": "^2.6.0",
     "typescript": "^5.0.2",
-    "vite": "^4.4.0"
+    "vite": "^4.4.0",
+    "vitest": "^0.33.0",
+    "webdriverio": "^8.12.1"
   },
   "dependencies": {
     "nostr-tools": "^1.12.1"
