--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@smui/button": "^7.0.0-beta.14",
     "@smui/card": "^7.0.0-beta.14",
     "@smui/fab": "^7.0.0-beta.14",
+    "@smui/icon-button": "^7.0.0-beta.14",
     "@smui/textfield": "^7.0.0-beta.14",
     "@sveltejs/vite-plugin-svelte": "^2.4.2",
     "@tsconfig/svelte": "^5.0.0",
