--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "format": "npx prettier --write .",
     "ci:format": "npx prettier --check .",
-    "test": "vitest run"
+    "test": "vitest run",
+    "ci:test": "vitest run --coverage"
   },
   "devDependencies": {
     "@smui/button": "^7.0.0-beta.14",
@@ -21,14 +22,14 @@
     "@sveltejs/vite-plugin-svelte": "^2.4.2",
     "@tsconfig/svelte": "^5.0.0",
     "@vitest/browser": "^0.33.0",
+    "@vitest/coverage-istanbul": "^0.33.0",
     "prettier": "^3.0.0",
     "svelte": "^4.0.3",
     "svelte-check": "^3.4.4",
     "tslib": "^2.6.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.0",
-    "vitest": "^0.33.0",
-    "webdriverio": "^8.12.1"
+    "vitest": "^0.33.0"
   },
   "dependencies": {
     "nostr-tools": "1.12.0"
