--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "shotr",
   "private": true,
-  "version": "0.1.4",
+  "version": "0.1.5",
   "type": "module",
+  "engines": {
+    "node": ">=20"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
