--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
-    "format": "npx prettier --write .",
-    "ci:format": "npx prettier --check .",
+    "format": "npx prettier --write --plugin prettier-plugin-svelte .",
+    "ci:format": "npx prettier --check --plugin prettier-plugin-svelte .",
     "test": "vitest run",
-    "ci:test": "vitest run --coverage"
+    "ci:test": "vitest run --coverage",
+    "prettier": "prettier"
   },
   "devDependencies": {
     "@smui/button": "^7.0.0-beta.14",
@@ -27,6 +28,7 @@
     "@vitest/browser": "^0.33.0",
     "@vitest/coverage-istanbul": "^0.33.0",
     "prettier": "^3.0.0",
+    "prettier-plugin-svelte": "^3.0.0",
     "svelte": "^4.0.3",
     "svelte-check": "^3.4.4",
     "tslib": "^2.6.0",
