--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "devDependencies": {
     "@smui/button": "^7.0.0-beta.14",
     "@smui/card": "^7.0.0-beta.14",
+    "@smui/circular-progress": "^7.0.0-beta.14",
+    "@smui/dialog": "^7.0.0-beta.14",
     "@smui/fab": "^7.0.0-beta.14",
     "@smui/icon-button": "^7.0.0-beta.14",
     "@smui/textfield": "^7.0.0-beta.14",
