--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,6 +18,8 @@ jobs:
         with:
           go-version: '1.15'
       - run: curl https://get.volta.sh | bash
+      - run: ls -a ~/
+      - run: source ~/.bashrc
       - run: volta install node@20
       - run: npm install --global yarn
       - run: go install github.com/studiokaiji/nostr-webhost/nostrh@latest
