--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,10 +19,9 @@ jobs:
           go-version: '1.15'
       - run: curl https://get.volta.sh | bash
       - run: ls -a ~/
-      - run: cat ~/.bash_profile
-      - run: cat ~/.bashrc
-      - run: source ~/.bashrc
-      - run: source ~/.bash_profile
+      - run: export VOLTA_HOME="$HOME/.volta"
+      - run: export PATH="$VOLTA_HOME/bin:$PATH"
+      - run: volta -v
       - run: volta install node@20
       - run: npm install --global yarn
       - run: go install github.com/studiokaiji/nostr-webhost/nostrh@latest
