--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -17,12 +17,7 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: '1.15'
-      - run: curl https://get.volta.sh | bash
-      - run: ls -a ~/
-      - run: export VOLTA_HOME="$HOME/.volta"
-      - run: export PATH="$VOLTA_HOME/bin:$PATH"
-      - run: volta -v
-      - run: volta install node@20
+      - run: nvm use 20
       - run: npm install --global yarn
       - run: go install github.com/studiokaiji/nostr-webhost/nostrh@latest
       - run: yarn install --frozen-lockfile
