--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: '1.15'
-      - run: nvm use 20
+      - run: node -v
       - run: npm install --global yarn
       - run: go install github.com/studiokaiji/nostr-webhost/nostrh@latest
       - run: yarn install --frozen-lockfile
