--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,12 +19,12 @@ jobs:
           go-version: '1.21'
       - run: node -v
       - run: npm install --global yarn
-      - run: export GO111MODULE=on
       - run: go install github.com/studiokaiji/nostr-webhost/nostrh@latest
       - run: yarn install --frozen-lockfile
       - run: yarn build
+      - run: nostrh help
       - run: nostrh generate-key
       - run: nostrh add-relay wss://r.hostr.cc
       - run: pwd
       - run: ls
-      - run: nostrh deploy /dist
+      - run: nostrh deploy -p /dist
