--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "vitest": "^0.33.0"
   },
   "dependencies": {
-    "nostr-tools": "1.12.0"
+    "nostr-tools": "1.12.0",
+    "svelte-qrcode": "^1.0.0"
   }
 }
